--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -40,7 +40,7 @@
 }
 
 @inproceedings{cannavo2023ar,
-  abbr={AJP},
+  abbr={IEEEVR},
   title={AR-MoCap: using augmented reality to support motion capture acting},
   author={Cannavò, Alberto and Pratticò, Filippo Gabriele and Bruno, Alberto and Lamberti, Fabrizio},
   booktitle={2023 IEEE Conference Virtual Reality and 3D User Interfaces (VR)},
@@ -48,3 +48,126 @@
   year={2023},
   google_scholar_id={e5wmG9Sq2KIC}
 }
+
+@inproceedings{jiang2021handpainter,
+  title={Handpainter-3d sketching in vr with hand-based physical proxy},
+  author={Jiang, Ying and Zhang, Congyi and Fu, Hongbo and Cannav{\`o}, Alberto and Lamberti, Fabrizio and Lau, Henry YK and Wang, Wenping},
+  booktitle={Proceedings of the 2021 CHI conference on human factors in computing systems},
+  pages={1--13},
+  year={2021},
+  google_scholar_id={_kc_bZDykSQC}
+}
+
+@article{cannavo2024immersive,
+  title={Immersive movies: The effect of point of view on narrative engagement},
+  author={Cannavò, Alberto and Castiello, Antonio and Prattic{\`o}, F Gabriele and Mazali, Tatiana and Lamberti, Fabrizio},
+  journal={AI \& SOCIETY},
+  volume={39},
+  number={4},
+  pages={1811--1825},
+  year={2024},
+  google_scholar_id={mB3voiENLucC},
+  publisher={Springer}
+}
+
+@article{cannavo2024passive,
+  title={Passive Haptics and Conversational Avatars for Interacting with Ancient Egypt Remains in High-Fidelity Virtual Reality Experiences},
+  author={Cannavò, Alberto and Pacchiotti, Simona and Retta, Nicola and Terzoli, Martina and Spallone, Roberta and Lamberti, Fabrizio},
+  journal={ACM Journal on Computing and Cultural Heritage},
+  volume={17},
+  number={2},
+  pages={1--28},
+  year={2024},
+  google_scholar_id={JV2RwH3_ST0C},
+  publisher={ACM New York, NY}
+}
+
+@article{calandra2023immersive,
+  title={Immersive virtual reality and passive haptic interfaces to improve procedural learning in a formal training course for first responders},
+  author={Calandra, Davide and De Lorenzis, Federico and Cannavò, Alberto and Lamberti, Fabrizio},
+  journal={Virtual Reality},
+  volume={27},
+  number={2},
+  pages={985--1012},
+  year={2023},
+  google_scholar_id={hC7cP41nSMkC},
+  publisher={Springer}
+}
+
+@article{cannavo2024sketch,
+  title={A sketch-based interface for facial animation in immersive virtual reality},
+  author={Cannav{\`o}, Alberto and Stellini, Emanuele and Zhang, Congyi and Lamberti, Fabrizio},
+  journal={International Journal of Human--Computer Interaction},
+  volume={40},
+  number={12},
+  pages={3234--3252},
+  year={2024},
+  google_scholar_id={j3f4tGmQtD8C},
+  publisher={Taylor \& Francis}
+}
+
+@article{gatteschi2021comparing,
+  title={Comparing algorithms for aggressive driving event detection based on vehicle motion data},
+  author={Gatteschi, Valentina and Cannavò, Alberto and Lamberti, Fabrizio and Morra, Lia and Montuschi, Paolo},
+  journal={IEEE Transactions on Vehicular Technology},
+  volume={71},
+  number={1},
+  pages={53--68},
+  year={2021},
+  google_scholar_id={4DMP91E08xMC},
+  publisher={IEEE}
+}
+
+@article{prattico2021comparing,
+  title={Comparing state-of-the-art and emerging augmented reality interfaces for autonomous vehicle-to-pedestrian communication},
+  author={Prattic{\`o}, F Gabriele and Lamberti, Fabrizio and Cannav{\`o}, Alberto and Morra, Lia and Montuschi, Paolo},
+  journal={IEEE Transactions on Vehicular Technology},
+  volume={70},
+  number={2},
+  pages={1157--1168},
+  year={2021},
+  google_scholar_id={Zph67rFs4hoC},
+  publisher={IEEE}
+}
+
+@article{cannavo2020evaluation,
+  abbr={TVCG},  
+  title={An evaluation testbed for locomotion in virtual reality},
+  author={Cannav{\`o}, Alberto and Calandra, Davide and Prattic{\`o}, F Gabriele and Gatteschi, Valentina and Lamberti, Fabrizio},
+  journal={IEEE Transactions on Visualization and Computer Graphics},
+  volume={27},
+  number={3},
+  pages={1871--1889},
+  year={2020},
+  google_scholar_id={3fE2CSJIrl8C},
+  publisher={IEEE}
+}
+
+@article{cannavo2020blockchain,
+  title={How blockchain, virtual reality, and augmented reality are converging, and why},
+  author={Cannavo, Alberto and Lamberti, Fabrizio},
+  journal={IEEE Consumer Electronics Magazine},
+  volume={10},
+  number={5},
+  pages={6--13},
+  year={2020},
+  google_scholar_id={MXK_kJrjxJIC},
+  publisher={IEEE}
+}
+
+@article{lamberti2020immersive,
+  title={Is immersive virtual reality the ultimate interface for 3D animators?},
+  author={Lamberti, Fabrizio and Cannavo, Alberto and Montuschi, Paolo},
+  journal={Computer},
+  volume={53},
+  number={4},
+  pages={36--45},
+  year={2020},
+  google_scholar_id={5nxA0vEk-isC},
+  publisher={IEEE}
+}
+
+
+
+
+
